--- a/admin/src/main/resources/static/1.html
+++ b/admin/src/main/resources/static/1.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
     <title>三级导航</title>
-	
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/left-side-menu.css">
-    <link rel="stylesheet" type="text/css" href="font/iconfont.css">
+	<link rel="stylesheet" type="text/css" href="font/iconfont.css">
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
     
 </head>
@@ -16,14 +16,45 @@
 <script>
 	$(function() {
 		$("#leftMenu").leftMenu({
-			
+			expandId : 1,
+			selectedId : 5,
+			dataList : [
+				{"id":1,"pid":0,"text":"菜单1"},
+				{"id":2,"pid":0,"text":"菜单2"},
+				{"id":3,"pid":0,"text":"菜单3"},
+				{"id":4,"pid":0,"text":"菜单4"},
+				{"id":5,"pid":1,"text":"菜单5"},
+				{"id":6,"pid":1,"text":"菜单6"},
+				{"id":7,"pid":1,"text":"菜单7"},
+				{"id":8,"pid":2,"text":"菜单8"},
+				{"id":9,"pid":2,"text":"菜单9"},
+				{"id":10,"pid":0,"text":"菜单10"},
+				{"id":11,"pid":0,"text":"菜单10"},
+				{"id":12,"pid":0,"text":"菜单10"},
+				{"id":13,"pid":0,"text":"菜单10"},
+				{"id":14,"pid":0,"text":"菜单10"},
+				{"id":15,"pid":0,"text":"菜单10"},
+				{"id":16,"pid":0,"text":"菜单10"},
+				{"id":17,"pid":0,"text":"菜单10"},
+				{"id":18,"pid":0,"text":"菜单10"},
+				{"id":19,"pid":0,"text":"菜单10"},
+				{"id":10,"pid":0,"text":"菜单10"},
+				{"id":21,"pid":0,"text":"菜单10"},
+				{"id":22,"pid":0,"text":"菜单10"},
+				{"id":23,"pid":0,"text":"菜单10"},
+				{"id":24,"pid":0,"text":"菜单24"},
+				{"id":25,"pid":0,"text":"菜单25"}
+			],
+			onClickMenu : function(item, index) {
+				alert(JSON.stringify(item));
+			}
 		});
 	});
 </script>
-
+	<script type="text/javascript" src="js/bootstrap-plugins/bootstrap.default.js"></script>
     <script type="text/javascript" src="js/jquery.slimscroll.min.js"></script>
     <script type="text/javascript" src="js/bootstrap-plugins/leftMenu.js"></script>
-    
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
 
