--- a/admin/src/main/resources/static/index.html
+++ b/admin/src/main/resources/static/index.html
@@ -20,15 +20,14 @@
             <label>
                 <input type="checkbox" checked="checked">
                 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="50" cy="50" r="30"></circle>
-                    <path class="line--1" d="M0 40h62c18 0 18-20-17 5L31 55"></path>
-                    <path class="line--2" d="M0 50h80"></path>
-                    <path class="line--3" d="M0 60h62c18 0 18 20-17-5L31 45"></path>
+                    <circle cx="50" cy="50" r="30" />
+                    <path class="line--1" d="M0 40h62c18 0 18-20-17 5L31 55" />
+                    <path class="line--2" d="M0 50h80" />
+                    <path class="line--3" d="M0 60h62c18 0 18 20-17-5L31 45" />
                 </svg>
             </label>
 
         </div>
-<!--        <input type="text"/>-->
 
     </div>
     <div class="lsm-container">
@@ -305,11 +304,10 @@
                         </ul>
                     </li>
                     <li class="lsm-sidebar-item">
-                        <a href="javascript:;"><i class="my-icon lsm-sidebar-icon icon_3"></i><span>最后一条</span><i class="my-icon lsm-sidebar-more"></i></a>
-                        <ul>
-                            <li><a href="javascript:;"><span>火之国</span></a></li>
-                            <li><a href="javascript:;"><span>最后一条子菜单</span></a></li>
-                        </ul>
+                        <a href="javascript:;">
+                            <span>最后一条</span>
+                        </a>
+                        
                     </li>
                 </ul>
             </div>
