--- a/admin/src/main/resources/static/1.html
+++ b/admin/src/main/resources/static/1.html
@@ -83,6 +83,11 @@
 				//$(this).card("destroy");
 			}
 		});
+
+
+		let a = "3.4.3";
+		let b = "3.4.3.1";
+		alert(a > b);
 	});
 </script>
 	<script type="text/javascript" src="js/bootstrap-plugins/bootstrap.default.js"></script>
