--- a/admin/src/main/resources/static/1.html
+++ b/admin/src/main/resources/static/1.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
     <title>三级导航</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery.leftMenu.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="font/iconfont.css">
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
     
@@ -13,8 +13,8 @@
 <div class ="top"  style="width: 100%;height: 80px;background-color: #397bc5"></div>
 <div id="leftMenu"></div>
 <div class="center-content">
-	<nav id="pagination"></nav>
 	<div id="card"></div>
+	<input type="button" id="btn" value="点我" />
 </div>
 <script>
 	$(function() {
@@ -52,42 +52,42 @@
 				alert(JSON.stringify(item));
 			}
 		});
-
-		$("#pagination").pagination({
-			total : 102,
-			pageSize : 10,
-			currentPage : 1,
-			onSelectPage : function(currentPage) {
-				//alert(currentPage);
-			}
-		});
-		$("#card").card({
-			//width : 200,
-			//height : 300,
-			top : 100,
-			left : "20%",
-			cardStyle : $.bootstrapClass.PRIMARY,
-			header : {
-				html : "asdasdas",
-				style : {
-					color : "white"
+		
+		$("#card").table({
+			title : "我是标题",
+			columns : [{
+				checkbox : true,
+				align : "center"
+			}, {
+				title : "id",
+				field : "id",
+				align : "center"
+			}, {
+				title : "名称",
+				field : "name"
+			}, {
+				title : "年龄",
+				field : "age",
+				formatter : function(value, rowData, rowIndex) {
+					
+					return "哈哈哈" + value;
 				}
-			},
-			body : {
-				html : "dddlkjklj"
-			},
-			footer : {
-				html : "sssss"
-			},
-			onAfterClose : function() {
-				//$(this).card("destroy");
-			}
+			}],
+			data : [
+				{"id":1,"name":"名称1","age":"10"},
+				{"id":2,"name":"名称2","age":"20"},
+				{"id":3,"name":"名称3","age":"30"},
+				{"id":4,"name":"名称4","age":"40"}
+			],
+			pagination : true,
+			pageSize : 2
 		});
 
-
-		let a = "3.4.3";
-		let b = "3.4.3.1";
-		alert(a > b);
+		$("#btn").click(function() {
+			let chk = $("#card").table("getCheckData");
+			debugger
+			alert(chk.length);
+		});
 	});
 </script>
 	<script type="text/javascript" src="js/bootstrap-plugins/bootstrap.default.js"></script>
@@ -95,6 +95,7 @@
 	<script type="text/javascript" src="js/bootstrap-plugins/jquery.leftMenu.js"></script>
 	<script type="text/javascript" src="js/bootstrap-plugins/bootstrap.pagination.js"></script>
 	<script type="text/javascript" src="js/bootstrap-plugins/bootstrap.card.js"></script>
+	<script type="text/javascript" src="js/bootstrap-plugins/bootstrap.table.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
